--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,4 @@
 theme: jekyll-theme-minimal
 title: Amélie A. Gagnon
+
+Prior to joining IIEP in 2015, worked at the UNESCO Institute for Statistics (UIS) advising Member States of Latin America and the Caribbean in matters of EMIS, data collection, data management, monitoring and evaluation. Before joining UNESCO, she served as Economist-Statistician at Statistics Canada, working on disclosure risks in Saskatchewan (Canada).
